# XQchain

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
crates/xcqa-chain-core/: Cargo.toml
crates/xcqa-chain-core/src/: block.rs  blockchain.rs  error.rs  evm.rs  lib.rs  transaction.rs
crates/xcqa-chain-net/: Cargo.toml
crates/xcqa-chain-net/src/: error.rs  lib.rs  message.rs  network.rs  peer.rs
crates/xcqa-chain-node/: Cargo.toml
crates/xcqa-chain-node/src/: main.rs
crates/xcqa-chain-pow/: Cargo.toml
crates/xcqa-chain-pow/src/: cpu_solver.rs  difficulty.rs  error.rs  gpu_solver.rs  lib.rs
crates/xcqa-crypto/: Cargo.toml
crates/xcqa-crypto/src/: error.rs  hash.rs  lib.rs  mldsa.rs  pow.rs  serialization.rs  xcqa_wrapper.rs
crates/xcqa-crypto/src/lattice/: commitment.rs  mod.rs  params.rs  range_proof.rs  ring.rs
specs/: XCQA-CHAIN-SPEC-2026-001.md
