[package]
name = "xcqa-chain-net"
version = "0.1.0"
edition = "2021"

[dependencies]
xcqa-crypto = { path = "../xcqa-crypto" }
xcqa-chain-core = { path = "../xcqa-chain-core" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
serde = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
