[package]
name = "xcqa-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
ml-dsa = { workspace = true }
xcqa = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rkyv = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4"
